--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "express middleware to split traffic by adding cookies and updating headers",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\"",
     "lint": "eslint 'src/**/*.js' -f table --fix",
     "check": "npm-check -u"
   },
