Added main in package json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "traffic-manager",
   "version": "0.0.4",
   "description": "express middleware to split traffic by adding cookies and updating headers",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
     "lint": "eslint 'src/**/*.js' -f table --fix",
